--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.22.2",
-    "i18next": "^23.10.0",
-    "react-i18next": "^14.0.5",
-    "i18next-browser-languagedetector": "^7.2.0",
     "react-hook-form": "^7.51.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5"
+    "react-i18next": "^14.0.5",
+    "react-router-dom": "^6.22.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
