melhorias gerais e adquaçoes api, carregamento lazy dos icons, melhora de performace

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,12 @@
-FROM node:20-slim
+FROM node:18-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
-
-RUN npm install
+COPY node_modules ./
 
 COPY . .
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "dev", "--", "--host"]
